--- a/Upload_XmlAndCsvFile_Project/Upload_ExcelAndCsvFile_Project.csproj
+++ b/Upload_XmlAndCsvFile_Project/Upload_ExcelAndCsvFile_Project.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+    <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
     <PackageReference Include="MySqlConnector" Version="2.1.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
