--- a/Upload_XmlAndCsvFile_Project/Upload_ExcelAndCsvFile_Project.csproj
+++ b/Upload_XmlAndCsvFile_Project/Upload_ExcelAndCsvFile_Project.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="MySqlConnector" Version="2.1.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
@@ -16,6 +17,10 @@
     <None Update="SqlQueries.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UploadFileFolder\" />
   </ItemGroup>
 
 
